--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,4 +1,12 @@
 {% extends "_extend.twig" %}
 {% block yield %}
-    <h1>Dope</h1>
+    
+    <article class="section">
+        <h1>People how you doin', there's a new day dawnin'</h1>
+    </article>
+
+    <article class="section">
+        <h1>For the earth mother, it's a brand new mornin'</h1>
+    </article>
+
 {% endblock %}
